<resources>
    //Standard strings
    <string name="app_name">MDP_Bollie</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    //Custom strings
    <string name="logoImage">Logo Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_uitleg">De beste plek om te leren hoe je effectief op bol.com kunt verkopen!</string>
    <string name="open_bestellingen_txt">Aantal open bestellingen</string>
    <string name="open_retouren_text">Open retouren</string>
    <string name="klantvragen_txt">Klantvragen</string>
    <string name="maand_omzet_txt">Omzet van de maand</string>
    <string name="voorraad_txt">producten niet meer op voorraad</string>
    <string name="business_txt">Business</string>
    <string name="home_txt">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="greeting">Hi, %s</string>
    <string name="date">%s</string>
    <string name="following">Following</string>
    <string name="stimulation_button">Start learning!</string>
    <string name="stimulation_text">What would you want to learn today?</string>
    <string name="mijn_cursussen">Mijn cursussen</string>
    <string name="nu_lezen">Nu Lezen</string>
    <string name="profile">Profile</string>
    <string name="setings">Settings</string>
    <string name="userName"><![CDATA[<USER>]]></string>
    <string name="function">Function</string>
    <string name="cursussen">Cursussen</string>
    <string name="knop"><![CDATA[>]]></string>
    <string name="business">Business</string>
    <string name="comunity">Community</string>
    <string name="support">Support</string>
    <string name="personal_information">Personal Information</string>
    <string name="producten_txt">Producten</string>
    <string name="bestellingen_txt">Bestellingen</string>
    <string name="hoofdstuk1">Hoofdstuk 1</string>

<!--    Welcome Page -->
    <string name="head_title">Welkom bij</string>
    <string name="head_title_logo">bollie</string>
    <string name="home_aanmelden_btn">Aanmelden</string>
<!--    Login & Registration Page -->
    <string name="login_welcome">Welkom terug!</string>
    <string name="login_uWelcome">Login met je bollie account!</string>
    <string name="btn_login">Inloggen</string>
    <string name="btn_logout">Uitloggen</string>
    <string name="uitgelogd">U bent uitgelogd</string>
    <string name="AanmeldenOpLogin">Of meld je gratis aan</string>
    <string name="wachtwoord_vergeten">Wachtwoord vergeten?</string>
    <string name="voornaam_hint">Voornaam</string>
    <string name="achternaam_hint">Achternaam</string>
    <string name="gebruikersnaam_hint">Gebruikersnaam</string>
    <string name="geboortedatum_hint">Geboortedatum</string>
    <string name="bedrijfsnaam_hint">Bedrijf</string>
    <string name="email_hint">E-mail</string>
    <string name="wachtwoord_hint">Wachtwoord</string>

    <string name="aanmelden_welcome">Welkom</string>
    <string name="aanmelden_uWelcome">Meld je nu gratis aan</string>
    <string name="of_log_in">Of log in</string>

    <string name="enter_email">Please enter an email, this is a required field</string>
    <string name="enter_password">Please enter a password, this is a required field</string>
    <string name="enter_data">This field is required</string>

    <string name="successful_reg">You have been successfully registered</string>
    <string name="successful_login">You are logged in successfully</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="sex">Sex</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change password</string>
    <string name="push_notification">Push notification</string>
    <string name="darkmode">Darkmode</string>
    <string name="app_info">App info</string>
    <string name="financien_txt">Financiën</string>
    <!--    -->

</resources>