<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mdp_bollie.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_businesHubFragment"
            app:destination="@id/businesHubFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mdp_bollie.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mdp_bollie.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/businesHubFragment"
        android:name="com.example.mdp_bollie.BusinesHubFragment"
        android:label="fragment_busines_hub"
        tools:layout="@layout/fragment_busines_hub" >
        <action
            android:id="@+id/action_businesHubFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.mdp_bollie.ui.login.WelcomeFragment"
        android:label="fragment_welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mdp_bollie.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.mdp_bollie.ui.login.RegistrationFragment"
        android:label="fragment_registration"
        tools:layout="@layout/fragment_registration" />
</navigation>